# project1_borovinskikh_kirill_m25_555

./: .gitignore  README.md  game.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
