[project]
name = "project1-borovinskikh-kirill-m25-555"
version = "0.1.0"
description = "Лабиринт сокровищ — консольная игра"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "labyrinth_game" }]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"
[project]
name = "project1-borovinskikh-kirill-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Kirill",email = "petr999-9.6@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
