[tool.poetry]
name = "project1-borovinskikh-kirill-m25-555"
version = "0.1.0"
description = "Лабиринт сокровищ — консольная игра"
authors = ["Kirill <petr999-9.6@yandex.com>"]
readme = "README.md"
packages = [{ include = "labyrinth_game" }]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

