[tool.poetry]
name = "project1-borovinskikh-kirill-m25-555"
version = "0.1.0"
description = "Лабиринт сокровищ — консольная игра"
authors = ["Kirill <petr999-9.6@yandex.com>"]
readme = "README.md"
packages = [{ include = "labyrinth_game" }]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"
[tool.poetry.dependencies]
python = ">=3.10,<3.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.3,<0.15.0)"
]
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

